k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-monitoring-dashboard-svc
spec:
  selector:
    app: cloud-monitoring-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
